--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,79 @@
-/* add css module styles here (optional) */
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
   text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav input {
+  float: left;
+  display: block;
+  color: white;
+  text-align: left;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  background-color: #333;
+  border: none;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+  border-bottom: 5px solid #4CAF50;
+}
+
+.topnav a.selected, .topnav a:hover {
+  border-bottom: 5px solid #ddd;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.topnav .input {
+  display: block;
+}
+
+@media screen and (max-width: 915px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav .input {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 915px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
